--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index, follow"> 
     <meta name="google-site-verification" content="pm7UAtokMKaETEVF8r7uchMddDDEyAzFwn6kvOVZhAM" />
-    <link rel="canonical" href="https://deltaxecutor.com.br/" />
+    <link rel="canonical" href="https://deltaxecutors.com.br/" />
     <meta name="description" content="Delta Executor: análise completa da ferramenta para Roblox. Entenda seus recursos, riscos de segurança e implicações éticas no uso de scripts.">
     <title>Delta Executor: Análise Completa da Ferramenta de Scripts para Roblox</title>
     <!-- FAQ Schema JSON-LD -->
@@ -315,7 +315,7 @@
 
             <div class="call-to-action">
                 <p>Este artigo buscou apresentar uma visão detalhada e responsável sobre o tema. A busca por informações seguras é o primeiro passo para uma experiência digital positiva. Se você deseja <strong>ver mais informações</strong> detalhadas sobre os termos de serviço e políticas de segurança oficiais, sempre consulte as fontes primárias.</p>
-                <a href="https://deltaxecutor.com.br/" class="cta-button">Ver Mais Informações</a>
+                <a href="https://deltaxecutors.com.br/" class="cta-button">Ver Mais Informações</a>
             </div>
 
         </article>
